Feature : AddComputer (view only, not fonctional)

--- a/src/main/webapp/views/dashboard.html
+++ b/src/main/webapp/views/dashboard.html
@@ -242,8 +242,9 @@
                 <a href="#" aria-label="Next">
                     <span aria-hidden="true">&raquo;</span>
                 </a>
-            </li>
-        </ul>
+              </li>
+        	</ul>
+        </div>
 
         <div class="btn-group btn-group-sm pull-right" role="group" >
             <button type="button" class="btn btn-default">10</button>
