Fix : Front end validation, message on success / failed

--- a/src/main/webapp/views/addComputer.html
+++ b/src/main/webapp/views/addComputer.html
@@ -47,6 +47,10 @@
                             <a href="dashboard.html" class="btn btn-default">Cancel</a>
                         </div>
                     </form>
+                    
+                    <div class="alert alert-success" role="alert">
+					  This is a success alert—check it out!
+					</div>
                 </div>
             </div>
         </div>
