Authentification, Registration, Roles and Permissions

--- a/webapp/src/main/webapp/css/main.css
+++ b/webapp/src/main/webapp/css/main.css
@@ -41,3 +41,13 @@ input[type='checkbox'] {
 .welcome-message {
 	text-align: center;
 }
+
+.logout-button {
+	margin-top: 4px;
+	color: white !important;
+}
+
+.user-label {
+	color: #9d9d9d;
+	font-size: medium;
+}
