--- a/webapp/src/main/webapp/css/main.css
+++ b/webapp/src/main/webapp/css/main.css
@@ -42,12 +42,30 @@ input[type='checkbox'] {
 	text-align: center;
 }
 
-.logout-button {
-	margin-top: 4px;
-	color: white !important;
-}
-
 .user-label {
 	color: #9d9d9d;
 	font-size: medium;
+}
+
+.dropdown {
+	font-size: large;
+}
+
+.menu-icon {
+	margin-right: 8px;
+}
+
+.dropdown-menu {
+	background-color: #333;
+}
+
+.dropdown-menu-item {
+	font-size: medium;
+	color: #9d9d9d;
+	padding-left: 15px;
+}
+
+.dropdown-menu-item:hover {
+	color: white;
+	
 }
